added uuid as a dependency to index.js

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "movie_api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,9 +12,19 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samskaufel/movie_api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/samskaufel/movie_api/issues"
+  },
+  "homepage": "https://github.com/samskaufel/movie_api#readme",
+  "description": ""
 }
