--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "lodash": "^4.17.21",
+    "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
