--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "movie_api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "12.11.1"
+  },
   "scripts": {
     "start": "node index.js"
   },
